fix overlapping nav logo text

--- a/client/src/components/nav/index.css
+++ b/client/src/components/nav/index.css
@@ -105,7 +105,6 @@
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: -0.02em;
-  margin-left: -0.1875rem;
 }
 
 .nav-item {
